Issue #SB-27526 fix: Text overflow issue in Multiple Choice Questions

--- a/org.ekstep.questionunit.mcq-1.3/renderer/styles/horizontal_and_vertical.css
+++ b/org.ekstep.questionunit.mcq-1.3/renderer/styles/horizontal_and_vertical.css
@@ -234,13 +234,12 @@
     cursor: pointer;
     width: 100%;
     height: 15vh;
-    line-height: 15vh;
     margin-bottom: 1.5625%;
     border-radius: 4px;
     background-color: #FFFFFF;
-    box-shadow: 0 2px 4px 0 rgb(0 0 0 / 20%);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
     position: relative;
-    display: flex;
+    display: table;
 }
 .mcq-content-container .option-container.horizontal .option-block-container .option-width-50 {
     width: 48%;
@@ -301,8 +300,9 @@
     width: 10vw;
     float: left;
     position: relative;
-    display: table-cell;
+    display: flex;
     cursor: default;
+    align-items: center;
 }
 
 .mcq-content-container .option-container.horizontal .option-block-container .option-block .option-image-container.no-image {
@@ -322,13 +322,8 @@
 }
 .zoom-icon-set{
     position: relative;
-    top: 0;
-    transform: none;
     cursor: pointer;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
 }
 
 .mcq-content-container .option-container.horizontal .option-block-container .option-block img.tick {
@@ -401,8 +396,6 @@ mcq-content-container .option-container.horizontal .option-block-container .opti
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    line-height: initial;
-    padding-top: 5px;
 }
 .mcq-content-container .option-container.horizontal .option-block:last-child {
     margin-bottom: 0%;
